Add eng version.

--- a/_backup/www/templates/en/cat10.html
+++ b/_backup/www/templates/en/cat10.html
@@ -46,6 +46,25 @@
         </div>
         <div class="middle">
             <div class="products">
+
+                <div class="product" onclick="getPopup('subcat26/product1'); return false;">
+                    <img src="img/bull/bull-turkey.png" alt="">
+                    <div class="title">Bulmens</div>
+                    <div class="subtitle">with turkey</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product2'); return false;">
+                    <img src="img/bull/bull-beefAnd.png" alt="">
+                    <div class="title">Bulmens</div>
+                    <div class="subtitle">with pork and beef</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product3'); return false;">
+                    <img src="img/bull/bull-beef.png" alt="">
+                    <div class="title">Bulmens</div>
+                    <div class="subtitle">with beef</div>
+                </div>
+
+                <br>
+
                 <div class="product" onclick="getPopup('subcat1/product14'); return false;">
                     <img src="img/mother/img-dumpling-beef.png" alt="">
                     <div class="title">Meat dumplings</div>
@@ -83,6 +102,11 @@
                     <img src="img/new_pack/firmovi2.png" alt="">
                     <div class="title">Dumplings “Firmovi”</div>
                     <div class="subtitle"> with tender turkey<br>fillet</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat1/product19'); return false;">
+                    <img src="img/new_pack/firmovi3.png" alt="">
+                    <div class="title">Dumplings “Firmovi”</div>
+                    <div class="subtitle">with mushrooms</div>
                 </div>
 
                 <br>
@@ -315,35 +339,61 @@
 
                 <br>
 
-                <div class="product" onclick="getPopup('subcat3/product10'); return false;">
-                    <img src="img/products/cat3/product_thumb_10.jpg" alt="">
+                <!--<div class="product" onclick="getPopup('subcat3/product10'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_10.jpg" alt="">-->
+                    <!--<div class="title">Pancakes</div>-->
+                    <!--<div class="subtitle"> with meat</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat3/product12'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_12.jpg" alt="">-->
+                    <!--<div class="title">Pancakes</div>-->
+                    <!--<div class="subtitle">with chicken</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat3/product15'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_15.jpg" alt="">-->
+                    <!--<div class="title">Pancakes</div>-->
+                    <!--<div class="subtitle">with cottage cheese and raisins</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat3/product16'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_16.jpg" alt="">-->
+                    <!--<div class="title">Pancakes</div>-->
+                    <!--<div class="subtitle">with cottage cheese</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat7/product17'); return false;">-->
+                    <!--<img src="img/new_pack/product_thumb_17_1.png" alt="">-->
+                    <!--<div class="title">"Classic"</div>-->
+                    <!--<div class="subtitle">pancakes</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat7/product29'); return false;">-->
+                    <!--<img src="img/products/cat7/product_thumb_17.jpg" alt="">-->
+                    <!--<div class="title">Pancakes</div>-->
+                    <!--<div class="subtitle">with apples and cinnamon</div>-->
+                <!--</div>-->
+
+                <div class="product" onclick="getPopup('subcat25/product1'); return false;">
+                    <img src="img/pancakes/img-pancakes-classic.png" alt="">
                     <div class="title">Pancakes</div>
-                    <div class="subtitle"> with meat</div>
+                    <div class="subtitle">with meat</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat3/product12'); return false;">
-                    <img src="img/products/cat3/product_thumb_12.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product2'); return false;">
+                    <img src="img/pancakes/img-pancakes-chickenMeat.png" alt="">
                     <div class="title">Pancakes</div>
                     <div class="subtitle">with chicken</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat3/product15'); return false;">
-                    <img src="img/products/cat3/product_thumb_15.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product3'); return false;">
+                    <img src="img/pancakes/img-pancakes-cottageCheese.png" alt="">
                     <div class="title">Pancakes</div>
-                    <div class="subtitle">with cottage cheese and raisins</div>
+                    <div class="subtitle">with cheese and raisins</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat3/product16'); return false;">
-                    <img src="img/products/cat3/product_thumb_16.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product4'); return false;">
+                    <img src="img/pancakes/img-pancakes-strawberry.png" alt="">
                     <div class="title">Pancakes</div>
-                    <div class="subtitle">with cottage cheese</div>
+                    <div class="subtitle">with strawberry</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat7/product17'); return false;">
-                    <img src="img/new_pack/product_thumb_17_1.png" alt="">
-                    <div class="title">"Classic"</div>
-                    <div class="subtitle">pancakes</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat7/product29'); return false;">
-                    <img src="img/products/cat7/product_thumb_17.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product5'); return false;">
+                    <img src="img/pancakes/img-pancakes-apricot.png" alt="">
                     <div class="title">Pancakes</div>
-                    <div class="subtitle">with apples and cinnamon</div>
+                    <div class="subtitle">with apricots</div>
                 </div>
 
                 <br>
