--- a/_backup/www/templates/en/cat26.html
+++ b/_backup/www/templates/en/cat26.html
@@ -90,6 +90,11 @@
                     <div class="title">Dumplings “Firmovi”</div>
                     <div class="subtitle"> with tender turkey<br>fillet</div>
                 </div>
+                <div class="product" onclick="getPopup('subcat1/product19'); return false;">
+                    <img src="img/new_pack/firmovi3.png" alt="">
+                    <div class="title">Dumplings “Firmovi”</div>
+                    <div class="subtitle">with mushrooms</div>
+                </div>
 
                 <br>
 
